Suppress illegal reflective access operation warnings for java.time
Suppresses the following warnings when the tokens of the OHC OAuth2 client are (de)serialized by the JSON Storage:

WARNING: An illegal reflective access operation has occurred
WARNING: Illegal reflective access by com.google.gson.internal.bind.ReflectiveTypeAdapterFactory (file:/openhab/userdata/cache/org.eclipse.osgi/27/0/bundleFile) to field java.time.LocalDateTime.date
WARNING: Please consider reporting this to the maintainers of com.google.gson.internal.bind.ReflectiveTypeAdapterFactory
WARNING: Use --illegal-access=warn to enable warnings of further illegal reflective access operations
WARNING: All illegal access operations will be denied in a future release

Signed-off-by: Wouter Born <github@maindrain.net>